website/static/style.css
body{
    background-color: #fff;
    color: #666666;
    background-attachment: fixed;
}

* {
    box-sizing: border-box;
    font-family:'Karla';
    margin: 0;
}
h1{
    color: #6CBF49;
    font-family:'Open Sans';
    font-weight: 600;
    font-size: 2.5rem;
}

h2{
    color: #000;
    font-weight: 300;
}

h3{
    color: #6CBF49;
    font-weight: 800;
    font-size: 2rem;
    padding-bottom: 1.5rem;
}

h4{
    color: #6CBF49;
}

p{
    color: #000;
    font-weight: 500;
}

#wrapper{
    background-color: #fafafa;
    display: grid;
    grid-auto-rows: minmax(0px, auto);
    grid-template-columns: minmax(0px, 1fr) repeat(8, minmax(0, 250px)) minmax(0px, 1fr);
}
header{
    height: 100px;
    color: #fff;
    font-family: georgia, serif;
    grid-row: 1 / 2;
    grid-column: 3 / -3;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 2rem;
}
header img{
    height: 70px;
    padding-left: 2rem;
}
#headerbar{
    background-color: #fff;
    grid-column: 1 / -1;
    grid-row: 1 / 2;
}

#links a {
    color: #000;
    font-weight: 600;
    font-size: 1.15rem;
    text-decoration: none;
    padding: 0 2rem;
}

#bannerbar{
    background-color: #d4d4d4;
    grid-column: 2 / -2;
    grid-row: 2 / 3;
    height: 40rem;
}
#homebanner{
    display: flex;
    grid-column: 2 / -2;
    grid-row: 2 / 3;
    align-items: center;
    justify-content: space-around;
    height: 40rem;
}
#hometext{
    color: #000;
    max-width: 30rem;
    padding: 0 5rem;
}
#homebanner img{
    width: 25rem;
    padding-right: 5rem;
}


.signup{
    background-color: #6CBF49;
    padding: 10px 20px;
    font-size: 1rem;
    border: none;
    color: #fff;
    border-radius: 5px;
    text-decoration: none;
}

#signin{
    background-color: #fff;
    border-style: solid;
    padding: 10px 20px;
    font-size: 1rem;
    border-color: #6CBF49;
    border-radius: 5px;
    color: #000;
    text-decoration: none;
}

.buttonClass{
    background-color: #6CBF49;
    padding: 15px 20px;
    font-size: 1.5rem;
    border: none;
    color: #fff;
    border-radius: 5px;
    text-decoration: none;
}
.homecontainer{
    grid-column: 2 / -2;
    display: flex;
    height: 150px;
    align-items: center;
    justify-content: center;
}
dt{
    color: #000;
    font-weight: bold;
}
.light{
    font-weight: 400;
}
.bold{
    font-weight: 800;
    font-size: 110%;
}
#examplescontainer{
    background-color: #fff;
    display: flex;
    grid-column: 1 / -1;
    text-align: center;
    align-items: flex-start;
    justify-content: space-around;
    flex-wrap: wrap;
    margin: auto;
    padding: 3rem;
}

.example{
    width: 20rem;
    padding: 2rem;
}
.example img{
    width: 150px;
}
.example h3{
    margin: 1rem 0;
}
form{
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: 200px 1fr;
    gap: 0.75rem;
    width: 100%;
}
#features{
    grid-column: 3 / -3;
    padding-top: 2rem;
}

#record{
    display: flex;
    justify-content:space-around;
    align-items: center;
}

#recordtext{
    width: 350px;
}
#spending{
    display: flex;
    justify-content: space-around;
    align-items: center;
}
#spendingtext{
    width: 350px;
    text-align: right;
}
.shrinkimg{
    width: 100%;
}
.imgbox{
    width: 300px;
}
footer{
    font-style: italic;
    padding: 1rem;
    grid-column: 2 / -2;
    grid-row: 6 / 7;
    text-align: center;
    height: 85px;
    margin-top: 1rem;
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: center;
}
#footerbar{
    background-color: #d4d4d4;
    grid-column: 1 / -1;
    grid-row: 6 / 7;
}
footer p{
    color: #666666;
    padding: 0 2rem;
}


@media only screen and (max-width: 768px){
    #wrapper{
        grid-template-columns: minmax(0px, 1fr) repeat(8, minmax(0, 175px)) minmax(0px, 1fr);
    }

    *{
        text-align: center;
        align-items: center;
        margin: 0;
        padding: 0;
    }
    #links a{
        display: none;
    }

    #homebanner{
        grid-column: 1 / -1;
        flex-flow: column;
        height: auto;
        justify-content: center;
        align-items: center;
    }
    #hometext{
        padding-top: 2rem;
    }
    #homebanner img{
        padding: 2rem;
    }
    #bannerbar{
        height: 65rem
    }

    header{
        justify-content: center;
        flex-flow: column;
        height: 10rem;
        justify-content: flex-end;
    }
 
    #signbuttons{
        margin: 1.5rem 0;
    }
    .example{
        padding: 0;
    }
    .example img{
            padding: 3rem 0 0 0;
    }
    #features{
        grid-column: 2 / -2;
    }

    #record{
        flex-flow: column;
        margin: 5rem 0;
    }
    .homecontainer{
        height: 100px;
    }
    #spending{
        flex-flow: column-reverse;
        margin: 5rem 0;
    }
    form{
        display: grid;
        grid-template-rows: auto;
        grid-template-columns: 200px 1fr;
        gap: 0.75rem;
        width: 100%;
    }
}

